--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "transactions": "node scripts/get-transactions.js --network mainnet --fast",
     "snapshot": "node scripts/build-snapshot.js --network mainnet",
-    "compile": "npx truffle compile"
+    "compile": "npx truffle compile",
+    "start": "npm run compile && npm run transactions && npm run snapshot"
   },
   "repository": {
     "type": "git",
